--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-admin</title>
+    <title>智讯资讯服务平台</title>
   </head>
   <body>
     <div id="app"></div>
